--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,17 @@
 {
-	"image": "mcr.microsoft.com/devcontainers/java",
+	"image": "mcr.microsoft.com/devcontainers/java:0-17",
 	"features": {
-		"ghcr.io/devcontainers/features/java:17.0.12": {},
+		"ghcr.io/devcontainers/features/java:1": {
+			"version": "none",
+			"installMaven": "true",
+			"installGradle": "false"
+		},
+		"ghcr.io/devcontainers-contrib/features/ant-sdkman:2": {},
 		"ghcr.io/devcontainers/features/desktop-lite:1": {}
 	},
+	
 	"forwardPorts": [6080],
+	
 	"portsAttributes": {
 		"6080": {
 			"label": "desktop"
