--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,11 @@
 			"installMaven": "true",
 			"installGradle": "false"
 		},
+		"ghcr.io/devcontainers/features/java:17": {
+			"version": "none",
+			"installMaven": "true",
+			"installGradle": "false"
+		},
 		"ghcr.io/devcontainers-contrib/features/ant-sdkman:2": {},
 		"ghcr.io/devcontainers/features/desktop-lite:1": {}
 	},
