--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 		"ghcr.io/devcontainers/features/desktop-lite:1": {}
 	},
 	
-	"forwardPorts": [6080],
+	"forwardPorts": [6080, 5901],
 	
 	"portsAttributes": {
 		"6080": {
